--- a/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
@@ -8,9 +8,9 @@
             "filename": "../../intro/intro.md"
         },
         {
-            "title": "Getting Started",
+            "title": "Get Started",
             "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable).",
-            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/event-register-free-tier-account.md"
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
         },
         {
             "title": "Lab 1: Create Autonomous Database Instance",
@@ -44,7 +44,7 @@
         },
         {
             "title": "Lab 7: Type Handlers",
-            "description": "Use type handlers to alter data fetched or sent to the Oracle database using the python-oracledb to ......",
+            "description": "Use type handlers to alter data fetched or sent to the Oracle database using the python-oracledb",
             "filename": "../../lab-7-type-handlers/type-handlers.md"
         },
         {
@@ -68,22 +68,7 @@
             "filename": "../../lab-11-thick-mode/thick.md"
         },
         {
-            "title": "Lab 12: Advanced Queueing",
-            "description": "Use advanced queueing APIs usable in python-oracledb thick mode allow messages to be passed between applications",
-            "filename": "../../lab-12-advanced-queueing/queue.md"
-        },
-        {
-            "title": "Lab 13: Scrollable Cursors",
-            "description": "Use python-oracledb thick mode applications to move backwards as well as forwards in query results",
-            "filename": "../../lab-13-scrollable-cursors/cursor.md"
-        },
-        {
-            "title": "Lab 14: Simple Oracle Document Access (SODA)",
-            "description": "Use SODA to retrieve, insert and query documents from Oracle databases",
-            "filename": "../../lab-14-soda/soda.md"
-        },
-        {
-            "title": "Lab 15: Query a JSON table from Python",
+            "title": "Lab 12: Query a JSON table from Python",
             "description": "Work with JSON data in Oracle databases using Python's interface",
             "filename": "../../lab-15-query-json/query-json.md"
         },
@@ -93,9 +78,8 @@
             "filename":"https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
         {
-            "title": "Need Help?",
-            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+            "title": "Oracle CloudWorld 2023 - Get Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
 }
