WMS 7341 Minor Tweaks

--- a/orcl-db-cicd-for-devs/workshops/freetier/manifest.json
+++ b/orcl-db-cicd-for-devs/workshops/freetier/manifest.json
@@ -23,7 +23,7 @@
             "filename": "../../lab2-help-generate-update/lab2-help-generate-update.md"
         },
         {
-            "title": "(Optional) Lab 3: Look under the hood - understanding changelog tables & changelogs",
+            "title": "Lab 3: Look under the hood - understanding changelog tables & changelogs",
             "description": "Learn The Details Of How Changelog Tables & Changelogs Work",
             "filename": "../../lab3-changelogtables-changelogs/lab3-changelogtables-changelogs.md"
         },
