--- a/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
@@ -7,10 +7,9 @@
             "description": "Introduction to the Python and Database scripting workshop.",
             "filename": "../../intro/intro.md"
         },
-        {
-            "title": "Get Started",
-            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable).",
-            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
+        {   "title": "Get Started", 
+            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for the Prerequisite lab. This lab is always second.", 
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md" 
         },
         {
             "title": "Lab 1: Create Autonomous Database Instance",
