--- a/python-and-database-scripting/workshops/ocw23-sandbox/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-sandbox/manifest.json
@@ -2,6 +2,10 @@
     "workshoptitle": "Python and Oracle for Developers",
     "help": "livelabs-help-db_us@oracle.com",
     "tutorials": [
+        {   "title": "Get Started", 
+            "description": "Prerequisites for LiveLabs (Oracle-owned tenancies). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",    
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs2.md" 
+        },
         {
             "title": "Introduction",
             "description": "Introduction to the Python and Database scripting workshop.",
