--- a/dotnet-adb-quickstart/workshops/ocw-freetier/manifest.json
+++ b/dotnet-adb-quickstart/workshops/ocw-freetier/manifest.json
@@ -48,7 +48,7 @@
             "filename": "../../clean-up/clean-up.md"
         },
         {
-            "title": "Oracle CloudWorld 2023 - Get Help",
+            "title": "Oracle CloudWorld 2023 - Support",
             "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
