--- a/orcl-blockchain-platform/workshops/ocw-tenancy/manifest.json
+++ b/orcl-blockchain-platform/workshops/ocw-tenancy/manifest.json
@@ -43,8 +43,13 @@
       "filename": "../../5-labs-obp-application-tokenXchange/obp-apex-application-tokenXchange.md"
     },
     {
-      "title": "Oracle CloudWorld 2022 - Get Help",
+      "title": "Environment Cleanup",
+      "description": "Cleanly dispose of all OCI resources created by ORM for the workshop, and delete the stack",
+      "filename": "https://oracle-livelabs.github.io/common/labs/cleanup-stack/cleanup-stack.md"
+    },
+    {
+      "title": "Oracle CloudWorld 2023 - Support",
       "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
-}
+    }
   ]
 }
