--- a/python-flask-web-application-with-ords-apis/workshop/workshops/ocw23-tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/ocw23-tenancy/manifest.json
@@ -48,7 +48,9 @@
             "filename": "../../other-livelabs/other-livelabs.md"
         },
         {
-            "title": "Oracle CloudWorld 2023 - Support", "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+            "title": "Oracle CloudWorld 2023 - Support", 
+            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     
                 ]
