--- a/rest-services-for-adb-appdevlive/workshops/ocw23-tenancy/manifest.json
+++ b/rest-services-for-adb-appdevlive/workshops/ocw23-tenancy/manifest.json
@@ -49,7 +49,9 @@
               "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
           },
           {
-            "title": "Oracle CloudWorld 2023 - Support", "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+            "title": "Oracle CloudWorld 2023 - Support", 
+            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
           }
       ]
   }
