--- a/python-flask-web-application-with-ords-apis/workshop/workshops/ocw23-tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/ocw23-tenancy/manifest.json
@@ -48,9 +48,9 @@
             "filename": "../../other-livelabs/other-livelabs.md"
         },
         {
-            "title": "Need Help?",
+            "title": "Oracle CloudWorld 2023 - Support", 
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common//labs/need-help/need-help-freetier.md"
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     
                 ]
