modified Get Help
modified Get Help

--- a/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
@@ -77,7 +77,7 @@
             "filename":"https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
         {
-            "title": "Oracle CloudWorld 2023 - Get Help",
+            "title": "Oracle CloudWorld 2023 - Support",
             "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
