--- a/python-and-database-scripting/workshops/ocw23-sandbox/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-sandbox/manifest.json
@@ -67,7 +67,7 @@
             "filename": "../../lab-15-query-json/query-json.md"
         },
         {
-            "title": "Oracle CloudWorld 2023 - Get Help",
+            "title": "Oracle CloudWorld 2023 - Support",
             "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
