--- a/orcl-db-cicd-for-devs/workshops/ocw23-tenancy/manifest.json
+++ b/orcl-db-cicd-for-devs/workshops/ocw23-tenancy/manifest.json
@@ -38,9 +38,9 @@
             "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
         {
-            "title": "Need Help?",
+            "title": "Oracle CloudWorld 2023 - Support", 
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
 }
