--- a/safethewildlife/workshops/devops/manifest.json
+++ b/safethewildlife/workshops/devops/manifest.json
@@ -52,7 +52,7 @@
       "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
     },
     {
-      "title": "Oracle CloudWorld 2023 - Get Help",
+      "title": "Oracle CloudWorld 2023 - Support",
       "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
     }
   ]
