--- a/dotnet-adb-quickstart/workshops/ocw-freetier/manifest.json
+++ b/dotnet-adb-quickstart/workshops/ocw-freetier/manifest.json
@@ -4,13 +4,13 @@
     "tutorials": [
         {
             "title": "Introduction",
-            "description": "Introduction to the Python and Database scripting workshop.",
+            "description": ".NET Development with Oracle Autonomous Database Quick Start",
             "filename": "../../intro/intro.md"
         },
         {
             "title": "Get started",
             "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable).",
-            "filename": "https://objectstorage.us-phoenix-1.oraclecloud.com/p/SJgQwcGUvQ4LqtQ9xGsxRcgoSN19Wip9vSdk-D_lBzi7bhDP6eG1zMBl0I21Qvaz/n/c4u02/b/common/o/labs/cloud-login/pre-register-free-tier-account.md"
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
         },
         {
             "title": "Lab 1: Provision Oracle Autonomous Database",
@@ -48,9 +48,8 @@
             "filename": "../../clean-up/clean-up.md"
         },
         {
-            "title": "Need Help?",
-            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://objectstorage.us-phoenix-1.oraclecloud.com/p/SJgQwcGUvQ4LqtQ9xGsxRcgoSN19Wip9vSdk-D_lBzi7bhDP6eG1zMBl0I21Qvaz/n/c4u02/b/common/o/labs/need-help/need-help-freetier.md"
+            "title": "Oracle CloudWorld 2023 - Support",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
 }
