--- a/springboot-adb-telegram/workshops/ocw23-tenancy/manifest.json
+++ b/springboot-adb-telegram/workshops/ocw23-tenancy/manifest.json
@@ -9,7 +9,7 @@
       },
       {
           "title": "Get Started",
-          "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+          "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for the Prerequisite lab. This lab is always second.",
           "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
       },
       {
@@ -33,9 +33,8 @@
           "filename": "../../teardown/teardown.md"
       },
       {
-          "title": "Need Help?",
-          "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
-      }
+          "title": "Oracle CloudWorld 2023 - Get Help",
+          "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+     }
   ]
 }
