--- a/springboot-adb-telegram/workshops/ocw23-tenancy/manifest.json
+++ b/springboot-adb-telegram/workshops/ocw23-tenancy/manifest.json
@@ -36,6 +36,10 @@
           "title": "Need Help?",
           "description": "Solutions to Common Problems and Directions for Receiving Live Help",
           "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
-      }
+      },
+      {
+        "title": "Oracle CloudWorld 2023 - Get Help",
+        "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+     }
   ]
 }
