--- a/orcl-blockchain-platform/workshops/ocw-tenancy/manifest.json
+++ b/orcl-blockchain-platform/workshops/ocw-tenancy/manifest.json
@@ -48,8 +48,9 @@
       "filename": "https://oracle-livelabs.github.io/common/labs/cleanup-stack/cleanup-stack.md"
     },
     {
-      "title": "Oracle CloudWorld 2023 - Support",
-      "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+      "title": "Need Help?",
+      "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+      "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
     }
   ]
 }
