--- a/orcl-blockchain-platform/workshops/ocw-tenancy/manifest.json
+++ b/orcl-blockchain-platform/workshops/ocw-tenancy/manifest.json
@@ -51,6 +51,11 @@
       "title": "Need Help?",
       "description": "Solutions to Common Problems and Directions for Receiving Live Help",
       "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
+    },
+    {
+      "title": "Oracle CloudWorld 2023 - Support",
+      "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+      "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
     }
   ]
 }
