--- a/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
@@ -5,7 +5,7 @@
         {
             "title": "Introduction",
             "description": "Introduction to the Python and Database scripting workshop.",
-            "filename": "../../intro/intro.md"
+            "filename": "../../intro/intro_gb.md"
         },
         {   "title": "Get Started", 
             "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for the Prerequisite lab. This lab is always second.", 
@@ -57,14 +57,14 @@
             "filename": "../../lab-9-rowfactory-functions/func.md"
         },
         {
-            "title": "Lab 10: Subclassing Connections and Cursors",
-            "description": "Use subclassing for hooking connection and cursor creation with python-oracledb",
-            "filename": "../../lab-10-con-and-cursors/con-and-cursors.md"
-        },
-        {
-            "title": "Lab 11: Thick Mode",
+            "title": "Lab 10: Thick Mode",
             "description": "Use python-oracledb thick-mode for accessing advanced Oracle database functionality",
             "filename": "../../lab-11-thick-mode/thick.md"
+        },
+        {
+            "title": "Lab 11: Scrollable Cursors",
+            "description": "Use python-oracledb thick mode applications to move backwards as well as forwards in query results",
+            "filename": "../../lab-13-scrollable-cursors/cursor.md"
         },
         {
             "title": "Lab 12: Query a JSON table from Python",
