--- a/java-management/workshops/ocw23-sandbox/manifest.json
+++ b/java-management/workshops/ocw23-sandbox/manifest.json
@@ -4,13 +4,13 @@
   "help": "autonomous_java-dev_us_grp@oracle.com",
   "tutorials": [
     {
-      "title": "Introduction",
-      "filename": "../../sandbox-labs/introduction/introduction.md"
+      "title": "Get Started",
+      "description": "Prerequisites for LiveLabs (Oracle-owned tenancies). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+      "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs2.md"
     },
     {
-      "title": "Get Started",
-      "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
-      "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs.md"
+      "title": "Introduction",
+      "filename": "../../sandbox-labs/introduction/introduction.md"
     },
     {
       "title": "Lab 1: Set Up a Fleet",
