--- a/da-functions-load-file-into-adw-python/workshops/freetier/manifest.json
+++ b/da-functions-load-file-into-adw-python/workshops/freetier/manifest.json
@@ -4,7 +4,7 @@
 	"tutorials": [
         {
             "title": "Getting Started",
-            "filename": "https://raw.githubusercontent.com/oracle/learning-library/master/common/labs/cloud-login/pre-register-free-tier-account.md"
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
         },
         {
             "title": "Introduction",
@@ -21,7 +21,7 @@
         {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename": "https://raw.githubusercontent.com/oracle/learning-library/master/oci-library/need-help/need-help-livelabs.md"
+            "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
         }
     ]
 }
