WMS ID 11378 and 11399
updates around QA and removing references to the OCW

--- a/safethewildlife/workshops/tenancy/devops/manifest.json
+++ b/safethewildlife/workshops/tenancy/devops/manifest.json
@@ -1,5 +1,5 @@
 {
-  "workshoptitle": "Automate your deployment with OCI DevOps, Save The Wildlife",
+  "workshoptitle": "Automate your app deployment with OCI DevOps and Kubernetes",
   "help": "livelabs-help-oci_us@oracle.com",
   "tutorials": [
     {
