--- a/safethewildlife/workshops/tenancy/appdev/manifest.json
+++ b/safethewildlife/workshops/tenancy/appdev/manifest.json
@@ -1,5 +1,5 @@
 {
-  "workshoptitle": "App Modernization Adventure, Save The Wildlife",
+  "workshoptitle": "from Monolith to Microservice - OCI App Modernization Adventure",
   "help": "livelabs-help-oci_us@oracle.com",
   "tutorials": [
     {
@@ -35,10 +35,6 @@
     {
       "title": "Need help",
       "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
-    },
-    {
-      "title": "Oracle CloudWorld 2023 - Support",
-      "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
     }
   ]
 }
