init for oracle-health-ai-open-source "Develop with Oracle AI and Database Services: Healthcare (Open Source Version)" workshop WMSID 11485

--- a/oracle-health-ai-open-source/workshops/tenancy/manifest.json
+++ b/oracle-health-ai-open-source/workshops/tenancy/manifest.json
@@ -21,7 +21,7 @@
       "filename": "../../clone-and-build/clone-and-build.md"
     },
     {
-      "title": "Lab 2: Provision Autonomous Database, and Setup OCI",
+      "title": "Lab 2: Provision Database, Setup OCI, and Configure Application",
       "filename": "../../setup-oci/setup-oci.md"
     },
     {
