init for oracle-health-ai-open-source "Develop with Oracle AI and Database Services: Healthcare (Open Source Version)" workshop WMSID 11485

--- a/oracle-health-ai-open-source/workshops/tenancy/manifest.json
+++ b/oracle-health-ai-open-source/workshops/tenancy/manifest.json
@@ -69,6 +69,10 @@
       "filename": "../../apex-map/apex-map.md"
     },
     {
+      "title": "Lab 14: Oracle Machine Learning For Healthcare",
+      "filename": "../../oml-healthcare/oml-healthcare.md"
+    },
+    {
       "title": "Need Help?",
       "description": "Solutions to Common Problems and Directions for Receiving Live Help",
       "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
