init for oracle-health-ai-open-source "Develop with Oracle AI and Database Services: Healthcare (Open Source Version)" workshop WMSID 11485

--- a/oracle-health-ai-open-source/workshops/tenancy/manifest.json
+++ b/oracle-health-ai-open-source/workshops/tenancy/manifest.json
@@ -61,7 +61,7 @@
       "filename": "../../ai-oda-flutter-ui/ai-oda-flutter-ui.md"
     },
     {
-      "title": "Lab 12: Full Stack Application with Maps and Spatial Queries to Locate Hospitals",
+      "title": "Lab 12: Full Stack Application with OpenStreetMap and Spatial Queries to Locate Hospitals",
       "filename": "../../spatial-map/spatial-map.md"
     },
     {
