--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -1,5 +1,5 @@
 {
-  "workshoptitle": "Develop with Oracle AI and Database Services: Gen, Vision, Speech, Language, and OML",
+  "workshoptitle": "Building Azure Devops CI/CD Pipelines with Oracle Database Cloud Services",
   "help": "livelabs-help-devdb-us@oracle.com",
 	"tutorials": [
       {
@@ -11,32 +11,32 @@
         "filename":"https://oracle-livelabs.github.io/common/labs/cloud-login/event-register-free-tier-account.md"
       },
       {
-        "title": "Lab 1: Setup",
+        "title": "Lab 1: Create an Oracle Cloud Database",
         "filename": "../../setup/setup.md"
       },
       {
-        "title": "Lab 2: Create A Pipeline",
-        "filename": "../../json/json.md"
+        "title": "Lab 2: Create an AKE Kubernetes Cluster",
+        "filename": "../../setup/setup.md"
       },
       {
-        "title": "Lab 3: Build The Application",
-        "filename": "../../ocivision-openaichat/ocivision-openaichat.md"
+        "title": "Lab 3: Deploy The Oracle Database Operator to AKE and Bind to the Oracle Database",
+        "filename": "../../deploy-oraoperator/deploy-oraoperator.md"
       },
       {
-        "title": "Lab 4: Runtime Pipeline Tests",
-        "filename": "../../ocivision-openaidalle/ocivision-openaidalle.md"
+        "title": "Lab 4: Setup The Pipeline",
+        "filename": "../../setup/setup.md"
       },
       {
-        "title": "Lab 5: Add OraOperator for Oracle Database Provisioning",
-        "filename": "../../ocivision-ocispeech-openaichat/ocivision-ocispeech-openaichat.md"
+        "title": "Lab 5: Run the pipeline",
+        "filename": "../../setup/setup.md"
       },
       {
-        "title": "Lab 6: Configure Oracle Database Interconnect",
-        "filename": "../../ocivision-ocispeech-openaichat/ocivision-ocispeech-openaichat.md"
+        "title": "Lab 6: Very Tests",
+        "filename": "../../setup/setup.md"
       },
       {
-        "title": "Lab 7: Access Oracle Cloud Database From Your Application",
-        "filename": "../../ocivision-ocispeech-openaichat/ocivision-ocispeech-openaichat.md"
+        "title": "Lab 7: Observability of Multi-Cloud Architecture",
+        "filename": "../../setup/setup.md"
       },
       {
         "title": "Lab 8: Tear Down",
