init "Building Azure Devops CI/CD Pipelines with Oracle Database Cloud Services" workshop

--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -15,7 +15,7 @@
         "filename": "../../setup/setup.md"
       },
       {
-        "title": "Lab 2: Create an AKE Kubernetes Cluster",
+        "title": "Lab 2: Create Resource Group and AKE Kubernetes Cluster",
         "filename": "../../createake/createake.md"
       },
       {
